bugfix(PM-339): Add horizontal scrolling to table to prevent cutoff

--- a/templates/insurance-page/insurance-page.css
+++ b/templates/insurance-page/insurance-page.css
@@ -112,6 +112,10 @@
 }
 
 /* Tables */
+.insurance-page .table {
+  overflow-x: scroll;
+}
+
 .insurance-page .table table {
   table-layout: fixed;
   border-collapse: separate;
